--- a/Clases/cardProducto.html
+++ b/Clases/cardProducto.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Card con precio y botones</title>
-  </head>
-  <body style="font-family: Arial, sans-serif; background:#f5f5f5; padding:20px;">
 
-    <div style="background:white; border-radius:10px; padding:20px; max-width:300px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+
+    <div class="cardContainer">
       <h2 style="margin:0 0 10px 0; font-size:20px; color:#333;">Título de la Card</h2>
       <p style="margin:0 0 15px 0; font-size:14px; color:#555; line-height:1.4;">
         Esta es una descripción corta dentro de la card. Podés escribir lo que quieras aquí.
@@ -22,5 +16,4 @@
         </button>
     </div>
 
-  </body>
-</html>
+
